@@ -62,6 +62,7 @@
 <updateRequestProcessorChain name="distrib-chain-explicit">
   <!-- explicit test using processors before and after distrib -->
   <processor class="solr.CustomUpdateRequestProcessorFactory" />
+  <processor class="solr.LogUpdateProcessorFactory" />
   <processor class="solr.DistributedUpdateProcessorFactory" />
   <processor class="solr.RemoveBlankFieldUpdateProcessorFactory" />
   <processor class="solr.RunUpdateProcessorFactory" />
@@ -69,6 +70,7 @@
 <updateRequestProcessorChain name="distrib-chain-implicit">
   <!-- implicit test w/o distrib declared -->
   <processor class="solr.CustomUpdateRequestProcessorFactory" />
+  <processor class="solr.LogUpdateProcessorFactory" />
   <processor class="solr.RemoveBlankFieldUpdateProcessorFactory" />
   <!-- distrib should be injected here -->
   <processor class="solr.RunUpdateProcessorFactory" />
@@ -76,6 +78,7 @@
 <updateRequestProcessorChain name="distrib-chain-noop">
   <!-- explicit test using noop distrib -->
   <processor class="solr.CustomUpdateRequestProcessorFactory" />
+  <processor class="solr.LogUpdateProcessorFactory" />
   <processor class="solr.NoOpDistributingUpdateProcessorFactory" />
   <processor class="solr.RemoveBlankFieldUpdateProcessorFactory" />
   <processor class="solr.RunUpdateProcessorFactory" />
